[package]
name = "reaper-theme-builder-2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zip = "0.6"
rust-ini = "0.21"
relative-path = "1.9.2"
thiserror = "1.0"
log = { version = "0.4" }
env_logger = "0.11"
