[package]
name = "reaper-theme-builder-2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zip = "0.6"
rust-ini = "0.21"
relative-path = "1.9.2"
thiserror = "1.0"
log = { version = "0.4" }
env_logger = "0.11"
nom = "7"
serde_json = "1.0"
serde_yaml = "0.9"
nom_locate = "4.2"
glob = "0.3"
serde = { version = "1.0", features = ["derive"] }
mlua = { version = "0.9", features = ["lua54", "vendored", "macros"] }
clap = { version = "4.5.3", features = ["derive"] }
indent = "0.1.1"

[dev-dependencies]
indoc = "2"
